sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value i
  i = 0
  ^AlgCombSort:7: error: not found: value i
  while(i+ecart < getNombreValeurs()){
        ^AlgCombSort:8: error: not found: value i
    if(plusPetit(i+ecart:Int,i:Int)){
                 ^AlgCombSort:8: error: not found: value i
    if(plusPetit(i+ecart:Int,i:Int)){
                             ^AlgCombSort:9: error: not found: value i
      echange(i:Int, i+ecart:Int)
              ^AlgCombSort:9: error: not found: value i
      echange(i:Int, i+ecart:Int)
                     ^AlgCombSort:10: error: not found: value i
      i = i+1
      ^